--- a/JavaStudy/pom.xml
+++ b/JavaStudy/pom.xml
@@ -45,6 +45,34 @@
 	  <artifactId>metadata-extractor</artifactId>
 	  <version>2.11.0</version>
 	</dependency>
+	
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-context</artifactId>
+    	<version>4.0.2.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-core</artifactId>
+    	<version>4.0.2.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-aop</artifactId>
+    	<version>4.0.2.RELEASE</version>
+    </dependency>
+    <!-- 下面这两个aspectj的依赖是为了引入AspectJ的注解 -->
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.8.9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.6.12</version>
+    </dependency>
+   <!--  Spring AOP底层会使用CGLib来做动态代理 -->
     <dependency>
     	<groupId>cglib</groupId>
     	<artifactId>cglib</artifactId>
